--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -20,7 +20,7 @@
       <svg class="my-4 text-white" height="60"></svg>
     </c-widget-stat-a>
   </c-col>
-  <c-col sm="6" xl="3">
+  <!-- <c-col sm="6" xl="3">
     <c-widget-stat-a
       class="mb-4"
       color="warning"
@@ -39,7 +39,7 @@
     >
       <svg class="my-4 text-white" height="60"></svg>
     </c-widget-stat-a>
-  </c-col>
+  </c-col> -->
 </c-row>
 
 <!-- <c-card class="mb-4">
